add java modules for java 11
Signed-off-by: Sergei Malafeev <sergeymalafeev@gmail.com>