@@ -4,6 +4,13 @@
 
 spring_clouds=(spring-cloud-greenwich)
 
+java_version=$(java -version 2>&1 | awk -F '"' '/version/ {print $2}')
+if  [[ ${java_version} == 11* ]] ;
+then
+    export ADD_JAVA_MOD="--add-modules java.logging --add-reads java.base=java.logging"
+fi
+
+
 cd httpclient-4.2.5
 echo "##############################################################################################"
 echo "httpclient-4.2.5"
